<resources>
    <string name="app_name">Go4Lunch</string>
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="title_map_view">Map</string>
    <string name="title_list_view">Restaurants</string>
    <string name="title_workmates_view">Workmates</string>
    <string name="facebook_application_id" translatable="false">418991109041382</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb418991109041382</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyChcg5b-4mypfI6aw2PpCcs4FStpO0AOgo</string>
    <string name="your_profile_picture">Your profile picture</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_email">Email</string>
    <string name="save">Save</string>
    <string name="user_decided">%1$S is eating %2$s (%3$s)</string>
    <string name="user_not_decided">%1$S hasn\'t decided yet</string>
    <string name="user_is_joining">%1$S is joining!</string>
    <string name="cancel">Cancel</string>
    <string name="hint_new_restaurant_name">Name</string>
    <string name="hint_new_restaurant_cuisine">Cuisine</string>
    <string name="hint_new_restaurant_address">Address</string>
    <string name="hint_new_restaurant_phone">Phone</string>
    <string name="hint_new_restaurant_website">Website</string>
    <string name="call">Call</string>
    <string name="like">Like</string>
    <string name="openWebsite">Website</string>
    <string name="restaurantImage">An image of the restaurant</string>
    <string name="restaurant_type_and_address">%1$s - %2$s</string>
    <string name="callButtonDescription">This button opens dialer</string>
    <string name="likeButtonDescription">This button likes the restaurant</string>
    <string name="websiteButtonDescription">This button opens restaurant\'s website in browser</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="restaurant_description">Restaurant type - address</string>
    <string name="restaurant_search_hint">Restaurant name</string>
    <string name="notification_switch">Toggle notifications</string>

</resources>
