<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/new_restaurant_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/your_profile_picture"
        tools:srcCompat="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/new_restaurant_name_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_new_restaurant_name"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/new_restaurant_cuisine_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_new_restaurant_cuisine"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/new_restaurant_address_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_new_restaurant_address"
        android:inputType="textPostalAddress" />
    <EditText
        android:id="@+id/new_restaurant_phone_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_new_restaurant_phone"
        android:inputType="phone" />
    <EditText
        android:id="@+id/new_restaurant_website_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_new_restaurant_website"
        android:inputType="textWebEditText" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorBackground"
        android:text="@string/cancel" />
    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/save" />
</LinearLayout>
</LinearLayout>